@@ -3,6 +3,8 @@
 # This file is part of querybot (-a modular perl jabber bot)
 # http://github.com/micressor/jabber-querybot
 #
+# Copyright (C) 2009-2012 Marco Balmer <marco@balmer.name>
+#
 # Querybot is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation, either version 3 of the License, or
@@ -20,8 +22,21 @@ package Querymodule;
 
 use strict;
 
-# This perl modules was not taken into debian packaging. Please install
-# modules manually if they does not work.
+=head1 NAME
+
+jabber-querybot - tel.search.ch
+
+=head1 DESCRIPTION
+
+With this bot you can access via jabber to the phone directory of
+switzerland.
+
+=head1 RESSOURCES
+
+http://tel.search.ch
+
+=cut
+
 use LWP::Simple;
 use LWP::UserAgent;
 use URI::URL;
@@ -124,3 +139,12 @@ for (my $i=0;$i<=3;$i++)
  }
 
 1;
+
+=head1 COPYRIGHT AND LICENSE
+
+Copyright (C) 2009-2012 Marco Balmer <marco@balmer.name>
+
+The Debian packaging is licensed under the 
+GPL, see `/usr/share/common-licenses/GPL-3'.
+
+=cut
