@@ -3,6 +3,7 @@
 
     * Migrating to a native module
     * Create pod documentation
+    * Copyright and license issues
 
 2011-11-23 Marco Balmer  <marco@balmer.name>
 
